--- a/index.html
+++ b/index.html
@@ -1,39 +1,100 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>DigitalNoiz</title>
-	<!-- jQuery Mobile setup -->
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="mylibs/jQueryMobile/jquery.mobile-1.0.1.min.css" />
-	<script src="mylibs/jquery-1.7.1.min.js"></script>
-	<script src="mylibs/jQueryMobile/jquery.mobile-1.0.1.min.js"></script>
-	<!-- Phonegap setup -->
-	<script type="text/javascript" charset="utf-8" src="js/phonegap.js"></script>
-	
-	<link rel="stylesheet" href="css/style.css" />
-	<script type="text/javascript" charset="utf-8" src="js/script.js"></script>
-</head>
-<body>
+ <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+                  "http://www.w3.org/TR/html4/strict.dtd">
+    <html>
+      <head>
+        <title>Media Example</title>
 
-<div data-role="page">
-	<div data-role="header" data-position="fixed">
-		<h1>DigitalNoiz</h1>
-	</div>
-	<div data-role="content">
-		<h2>Media Player</h2>
-		<div id="audioPosition">
-			<input type="range" name="slider" id="slider" value="0" min="0" max="100" data-highlight="true" disabled />
-		</div>
-		<div data-role="controlgroup" data-type="horizontal">
-			<input type="button" id="play" data-role="button" data-icon="audio-play" data-iconpos="notext" value="Play" />
-			<input type="button" id="pause" data-role="button" data-icon="audio-pause" data-iconpos="notext" value="Pause" disabled />
-			<input type="button" id="stop" data-role="button" data-icon="audio-stop" data-iconpos="notext" value="Stop" />
-			<input type="button" id="rewind" data-role="button" data-icon="audio-rewind" data-iconpos="notext" value="Rewind" />
-			<input type="button" id="record" data-role="button" data-icon="audio-record" data-iconpos="notext" value="Record">
-		</div>
-		<div id="recording"></div>
-	</div>
-</div>
+        <script type="text/javascript" charset="utf-8" src="phonegap-1.2.0.js"></script>
+        <script type="text/javascript" charset="utf-8">
 
-</body>
-</html>
+        // Wait for PhoneGap to load
+        //
+        document.addEventListener("deviceready", onDeviceReady, false);
+
+        // PhoneGap is ready
+        //
+        function onDeviceReady() {
+            playAudio("http://audio.ibeat.org/content/p1rj1s/p1rj1s_-_rockGuitar.mp3");
+        }
+
+        // Audio player
+        //
+        var my_media = null;
+        var mediaTimer = null;
+
+        // Play audio
+        //
+        function playAudio(src) {
+            // Create Media object from src
+            my_media = new Media(src, onSuccess, onError);
+
+            // Play audio
+            my_media.play();
+
+            // Update my_media position every second
+            if (mediaTimer == null) {
+                mediaTimer = setInterval(function() {
+                    // get my_media position
+                    my_media.getCurrentPosition(
+                        // success callback
+                        function(position) {
+                            if (position > -1) {
+                                setAudioPosition((position) + " sec");
+                            }
+                        },
+                        // error callback
+                        function(e) {
+                            console.log("Error getting pos=" + e);
+                            setAudioPosition("Error: " + e);
+                        }
+                    );
+                }, 1000);
+            }
+        }
+
+        // Pause audio
+        // 
+        function pauseAudio() {
+            if (my_media) {
+                my_media.pause();
+            }
+        }
+
+        // Stop audio
+        // 
+        function stopAudio() {
+            if (my_media) {
+                my_media.stop();
+            }
+            clearInterval(mediaTimer);
+            mediaTimer = null;
+        }
+
+        // onSuccess Callback
+        //
+        function onSuccess() {
+            console.log("playAudio():Audio Success");
+        }
+
+        // onError Callback 
+        //
+        function onError(error) {
+            alert('code: '    + error.code    + '\n' + 
+                  'message: ' + error.message + '\n');
+        }
+
+        // Set audio position
+        // 
+        function setAudioPosition(position) {
+            document.getElementById('audio_position').innerHTML = position;
+        }
+
+        </script>
+      </head>
+      <body>
+        <a href="#" class="btn large" onclick="playAudio('http://audio.ibeat.org/content/p1rj1s/p1rj1s_-_rockGuitar.mp3');">Play Audio</a>
+        <a href="#" class="btn large" onclick="pauseAudio();">Pause Playing Audio</a>
+        <a href="#" class="btn large" onclick="stopAudio();">Stop Playing Audio</a>
+        <p id="audio_position"></p>
+      </body>
+    </html>
