--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			alert('error');
 		}
 	</script>
+	<style>
+		body{
+			background-color: black;
+		}
+	</style>
 </head>
 <body>
 	<input type="submit" onclick="error();">
