--- a/index.html
+++ b/index.html
@@ -1,63 +1,68 @@
-<!--DOCTYPE html>
-<html>
-  <head>
-    <title>Capture Photo</title>
-    <script type="text/javascript" charset="utf-8" src="jquery.js"></script>
-  </head>
-  <body>
-    <input type="text" id="texto">
-    <input type="button" id="boton" value="OK">
-  </body>
-  <script>
-    $( document ).ready(function() {
-      $('#boton').on('click', function(){
-        $('#texto').val('xxx');
-      });
-    });
-  </script>
-</html-->
-
-
 <!DOCTYPE html>
-<html dir="rtl">
+<html lang="en">
   <head>
-    <title>Right-to-Left Languages</title>
     <meta charset="utf-8">
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&language=ar"></script>
-    <script>
-function initialize() {
-  var mapOptions = {
-    scaleControl: true,
-    center: new google.maps.LatLng(30.064742, 31.249509),
-    zoom: 10
-  };
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <icon src="favicon.ico" />
 
-  var map = new google.maps.Map(document.getElementById('map-canvas'),
-      mapOptions);
+    <title>Off Canvas Template for Bootstrap</title>
 
-  var marker = new google.maps.Marker({
-    map: map,
-    position: map.getCenter()
-  });
-  var infowindow = new google.maps.InfoWindow();
-  infowindow.setContent('<b>القاهرة</b>');
-  google.maps.event.addListener(marker, 'click', function() {
-      infowindow.open(map, marker);
-  });
-}
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap.min.css" rel="stylesheet">
 
-google.maps.event.addDomListener(window, 'load', initialize);
+    <!-- Custom styles for this template -->
+    <link href="offcanvas.css" rel="stylesheet">
 
-    </script>
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
+
   <body>
-    <div id="map-canvas"></div>
+    <nav class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">EternalPet</a>
+        </div>
+        <!--div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div-->
+      </div><!-- /.container -->
+    </nav><!-- /.navbar -->
+
+    <div class="container">
+    </div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="ie10-viewport-bug-workaround.js"></script>
+
+    <script src="offcanvas.js"></script>
   </body>
 </html>
